--- a/views/purchase_request_view.xml
+++ b/views/purchase_request_view.xml
@@ -29,7 +29,7 @@
                     <group>
                         <group>
                             <field name="purchase_number"/>
-                            <field name="name"/>
+                            <field name="name" placeholder="Hamada"/>
                             <field name="user_id"/>
                             <field name="date_start"/>
                         </group>
@@ -86,7 +86,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">purchase.request</field>
         <field name="view_mode">tree,form</field>
-        <field name="context">{}</field>
+<!--        <field name="context">{}</field>-->
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create a Purchase Request!
